# backend-practice

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 11d71324f8bcdaa6.txt  1329b0a33e3b57b4.txt  139e46c28833f929.txt  19fdcb08b44ea858.txt  1a3ba7c9ca85d41b.txt  1df8820e67178a39.txt  1ecf1aa39f61b69b.txt  2002528c8ad822a1.txt  217525755a2f6f3b.txt  23284c0e70afd498.txt  259d90a4a864e97b.txt  25a683719bf0ade5.txt  2685c656333a2c6b.txt  2c43d5345b1e19bf.txt  30a9da1977e9e4d3.txt  33c3acdaa7040c80.txt  3413f0b928af38a9.txt  3696e951dc95ce7a.txt  3914d92c6a19f220.txt  40651ba9ed35bf1f.txt  432750805d8ccdbf.txt  462bcab7180979b7.txt  478cfcfac7239ee3.txt  4d6b8e9d64e6deaf.txt  4f57b9f7931a2afe.txt  5132eb957aee540d.txt  52dd85c83fffc106.txt  53605b7f1dbe80f4.txt  5797810999baee84.txt  57f29027c78d8a73.txt  5a7c6c60e6b563e4.txt  5c48f8b0a0900b45.txt  5fd78418e19a8cfb.txt  60003e7899425f2c.txt  60379d3ffff6fc5d.txt  (+85 more)
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
logger/: logger.py  logger_config.py
tests/: conftest.py
utils/: api_session.py  error_collector.py  json_utils.py
widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  suites.json  summary.json
(+112 files in other folders)
